# pytorch_cpp

./: .gitignore  LICENSE  README.md
b1/: CMakeLists.txt  README.md  main.cpp
b2/: CMakeLists.txt  dataloader.cpp  main.cpp  minimal_example.csv  models.cpp  train_model.ipynb
b3/: inference.cpp
b4/: CMakeLists.txt  export_models.ipynb  main.cpp
b5/: CMakeLists.txt  client.cpp  server.cpp
b5/include/: client.h  model.h  server.h  utils.h
b6/: CMakeLists.txt  main.cpp  train.ipynb
